# home-sensor

./: .gitignore  CMakeLists.txt  README.md  crypto_consts.h  debug.h  display.h  font.h  gfx.c  gfx.h  hdc1080.c  hdc1080.h  i2c.c  i2c.h  lwipopts.h  picow_iot.c  rp2040-oled.c  source.c  test.c
certs/: ca.crt  client.crt  mqtt-server.txt
